--- a/05-2.sesion5-bai2.html
+++ b/05-2.sesion5-bai2.html
@@ -19,9 +19,9 @@
             <div class="w20">
                 <div class="feat-item col">
                     <h2 class="mar1">Contact info</h2>
-                    <h3 class="mar2"><span><i class="fa-solid fa-location-dot"></i></span>  adress: sdmlkasfdkdfsdfjlksdjflkdsjflkdsjflkjsdklfjlkdjflksdjk</h3>
-                    <h3 class="mar2"><span><i class="fa-regular fa-envelope"></i></span>    email</h3>
-                    <h3 class="mar2"><span><i class="fa-sharp fa-solid fa-phone"></i></span>    tel</h3>
+                    <h3 class="mar2"><span><i class="fa-solid fa-location-dot"></i></span>  address:333/abcd str., cde dist., mdc city </h3>
+                    <h3 class="mar2"><span><i class="fa-regular fa-envelope"></i></span>    abcbefge@gmail.com.vn</h3>
+                    <h3 class="mar2"><span><i class="fa-sharp fa-solid fa-phone"></i></span>    +81 1234 5678 90</h3>
                 </div>    
             </div>
 
